--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Oh my Swift
-email: your-email@example.com
+email: rizwan.ahmed95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ohmyswift.com focuses on delivering latest articles about Swift and iOS development.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://ohmyswift.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rizwanasifahmed
