--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: rizwan.ahmed95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ohmyswift.com focuses on delivering latest articles about Swift and iOS development.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://ohmyswift.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ohmyswift.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rizwanasifahmed
 github_username:  rizwan95
 google_analytics: UA-144905716-1
