Added SEO plugin.

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ plugins:
   - jekyll-archives
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 permalink: /:year/:month/:day/:title/
 paginate_path: /posts/:num/
