changes to post.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
     url: /archives/
   - title: "Social media"
     url: /social/
-  - title: "Showcase"
-    url: /showcase/
+  # - title: "Showcase"
+  #   url: /showcase/
     
