Added proper favicons and added another app to app showcase.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /archives/
   - title: "Social media"
     url: /social/
-  - title: "Showcase"
+  - title: "App Showcase"
     url: /showcase/
   - title: "Support us"
     url: "https://www.buymeacoffee.com/ohmyswift"
