--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Oh my Swift
+title: OhMySwift
 email: rizwan@ohmyswift.com
 description: >- # this means to ignore newlines until "baseurl:"
   Swift is easy to learn, but difficult to master. I will be writing interesting articles about Swift and iOS development here.
