--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
+version: '3'
 services:
   jekyll:
-    build: .
+    image: jekyll/jekyll:latest
+    volumes:
+      - .:/srv/jekyll
+      - ./vendor/bundle:/usr/local/bundle
     ports:
       - "4000:4000"
-    volumes:
-      - .:/app
-    environment:
-      - JEKYLL_ENV=production
-    command: jekyll serve --host 0.0.0.0 --trace5
+    command: jekyll serve --force_polling --drafts
