--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.8"
 services:
   jekyll:
     build: .
+    environment:
+      - JEKYLL_ENV=production
     volumes:
       - .:/srv/jekyll
       - /srv/jekyll/vendor/bundle
